--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>NOVOS PROJETOS CRIADOS POR MAURI BARROS</title>
 </head>
 <body>
-    "PROJETOS CRIADOS"
+    "PROJETOS CRIADOS NO GITHUB EM 08/06/2024"
 </body>
 </html>
